--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="img/favicon.ico">
   <meta name="description" content="My Resume">
-  <meta name="author" content="rshar064">
+  <meta name="author" content="862344484">
 
   <title>Raghav Sharma - Pre-Business</title>
 
